[package]
name = "search_job_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
teloxide = { version = "0.17.0", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
sled = "0.34"
pretty_env_logger = "0.5"
dotenvy = "0.15"